--- a/download.html
+++ b/download.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="download-links">
                         <a href="https://github.com/SimonLiu2016/dualvpn_manager" class="btn primary" target="_blank" data-i18n="view-github">View on GitHub</a>
-                        <a href="#" class="btn secondary" data-i18n="download-now">Download Now</a>
+                        <a href="./docs/index.html" class="btn secondary" data-i18n="documentation">Documentation</a>
                     </div>
                 </div>
 
@@ -86,7 +86,7 @@
                     </div>
                     <div class="download-links">
                         <a href="https://github.com/SimonLiu2016/password_manager" class="btn primary" target="_blank" data-i18n="view-github">View on GitHub</a>
-                        <a href="#" class="btn secondary" data-i18n="download-now">Download Now</a>
+                        <a href="./docs/index.html" class="btn secondary" data-i18n="documentation">Documentation</a>
                     </div>
                 </div>
             </div>
