--- a/projects.html
+++ b/projects.html
@@ -95,23 +95,23 @@
             
             <div class="oss-projects">
                 <div class="oss-project">
-                    <h3>UI Component Library</h3>
-                    <p data-i18n="ui-lib-desc">A collection of reusable UI components built with React and TypeScript.</p>
+                    <h3>DualVPN Manager</h3>
+                    <p data-i18n="ui-lib-desc">Advanced VPN management tool with dual connection support for MacOS</p>
                     <div class="oss-stats">
                         <span class="stat"><i class="star-icon">★</i> 1.2k stars</span>
                         <span class="stat"><i class="fork-icon">⑂</i> 240 forks</span>
                     </div>
-                    <a href="#" class="btn secondary" data-i18n="view-on-github">View on GitHub</a>
+                    <a href="https://github.com/SimonLiu2016/dualvpn_manager" class="btn secondary" data-i18n="view-on-github">View on GitHub</a>
                 </div>
                 
                 <div class="oss-project">
-                    <h3>API Development Toolkit</h3>
-                    <p data-i18n="api-toolkit-desc">Tools and utilities for rapid API development and testing.</p>
+                    <h3>Password Manager</h3>
+                    <p data-i18n="api-toolkit-desc">Secure password management solution with encryption for MacOS</p>
                     <div class="oss-stats">
                         <span class="stat"><i class="star-icon">★</i> 850 stars</span>
                         <span class="stat"><i class="fork-icon">⑂</i> 120 forks</span>
                     </div>
-                    <a href="#" class="btn secondary" data-i18n="view-on-github">View on GitHub</a>
+                    <a href="https://github.com/SimonLiu2016/password_manager" class="btn secondary" data-i18n="view-on-github">View on GitHub</a>
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="footer-section">
                     <h4 data-i18n="contact-info">Contact Info</h4>
-                    <p>Email: info@softtech.com</p>
+                    <p>Email: 582883825@qq.com</p>
                     <p data-i18n="rights-reserved">© 2025 SoftTech. All rights reserved.</p>
                 </div>
             </div>
