--- a/download.html
+++ b/download.html
@@ -48,7 +48,7 @@
                         <span class="icon">🔒</span>
                     </div>
                     <h3>DualVPN Manager</h3>
-                    <p data-i18n="dualvpn-desc">Advanced VPN management tool with dual connection support for MacOS</p>
+                    <p data-i18n="dualvpn-desc">Advanced VPN management tool with multi-connection support for MacOS</p>
                     <div class="download-info">
                         <div class="version">
                             <span data-i18n="version">Version:</span> 1.0.0
@@ -61,8 +61,8 @@
                         </div>
                     </div>
                     <div class="download-links">
-                        <a href="https://github.com/SimonLiu2016/dualvpn_manager" class="btn primary" target="_blank" data-i18n="view-github">View on GitHub</a>
-                        <a href="./docs/index.html" class="btn secondary" data-i18n="documentation">Documentation</a>
+                        <a href="https://github.com/SimonLiu2016/dualvpn_manager" class="btn primary" target="_blank" data-i18n="view-on-github-link">View on GitHub</a>
+                        <a href="./docs/dualvpn.html" class="btn secondary" data-i18n="dualvpn-documentation">DualVPN Documentation</a>
                     </div>
                 </div>
 
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="download-links">
-                        <a href="https://github.com/SimonLiu2016/password_manager" class="btn primary" target="_blank" data-i18n="view-github">View on GitHub</a>
+                        <a href="https://github.com/SimonLiu2016/password_manager" class="btn primary" target="_blank" data-i18n="view-on-github-link">View on GitHub</a>
                         <a href="./docs/index.html" class="btn secondary" data-i18n="documentation">Documentation</a>
                     </div>
                 </div>
