--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="project-content">
                         <h3>DualVPN Manager</h3>
-                        <p data-i18n="dualvpn-project-desc">Advanced VPN management tool with dual connection support for MacOS</p>
+                        <p data-i18n="dualvpn-project-desc">Advanced VPN management tool with multi-connection support for MacOS</p>
                         <div class="project-tags">
                             <span class="tag">MacOS</span>
                             <span class="tag">Swift</span>
