--- a/download.html
+++ b/download.html
@@ -61,8 +61,8 @@
                         </div>
                     </div>
                     <div class="download-links">
-                        <a href="https://github.com/SimonLiu2016/dualvpn_manager" class="btn primary" target="_blank" data-i18n="view-on-github-link">View on GitHub</a>
-                        <a href="./docs/dualvpn.html" class="btn secondary" data-i18n="dualvpn-documentation">DualVPN Documentation</a>
+                        <a href="./docs/dualvpn.html" class="btn primary" data-i18n="documentation">Documentation</a>
+                        <a href="#" class="btn secondary" data-i18n="download-now">Download Now</a>
                     </div>
                 </div>
 
@@ -85,8 +85,8 @@
                         </div>
                     </div>
                     <div class="download-links">
-                        <a href="https://github.com/SimonLiu2016/password_manager" class="btn primary" target="_blank" data-i18n="view-on-github-link">View on GitHub</a>
-                        <a href="./docs/index.html" class="btn secondary" data-i18n="documentation">Documentation</a>
+                        <a href="./docs/index.html" class="btn primary" data-i18n="documentation">Documentation</a>
+                        <a href="#" class="btn secondary" data-i18n="download-now">Download Now</a>
                     </div>
                 </div>
             </div>
