--- a/download.html
+++ b/download.html
@@ -19,6 +19,7 @@
                     <li><a href="./index.html" data-i18n="home">Home</a></li>
                     <li><a href="./about.html" data-i18n="about">About</a></li>
                     <li><a href="./projects.html" data-i18n="projects">Projects</a></li>
+                    <li><a href="./pricing.html" data-i18n="pricing">Pricing</a></li>
                     <li><a href="./download.html" class="active" data-i18n="download">Download</a></li>
                     <li><a href="./contact.html" data-i18n="contact">Contact</a></li>
                 </ul>
@@ -142,15 +143,24 @@
                         <li><a href="./index.html" data-i18n="home">Home</a></li>
                         <li><a href="./about.html" data-i18n="about">About</a></li>
                         <li><a href="./projects.html" data-i18n="projects">Projects</a></li>
+                        <li><a href="./pricing.html">Pricing</a></li>
                         <li><a href="./download.html" data-i18n="download">Download</a></li>
                         <li><a href="./contact.html" data-i18n="contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="./terms-and-conditions.html">Terms & Conditions</a></li>
+                        <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="./refund-policy.html">Refund Policy</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h4 data-i18n="contact-info">Contact Info</h4>
                     <p>Email: 582883825@qq.com</p>
                     <p>Website: v8en.com</p>
-                    <p data-i18n="rights-reserved">© 2025 V8Engine. All rights reserved.</p>
+                    <p>© 2025 V8Engine (Simon Liu). All rights reserved.</p>
                 </div>
             </div>
         </div>
