--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -34,7 +34,7 @@
     <section class="about-hero">
         <div class="container">
             <h2>Terms and Conditions</h2>
-            <p>Welcome to V8Engine. These terms and conditions outline the rules and regulations for the use of V8Engine's Website.</p>
+            <p>Welcome to V8Engine. These terms and conditions outline the rules and regulations for the use of V8Engine's Website. This agreement is between you and V8Engine (Simon Liu), the owner and operator of v8en.com.</p>
         </div>
     </section>
 
@@ -101,6 +101,11 @@
                 <div class="value-item">
                     <h3>11. Entire Agreement</h3>
                     <p>These Terms constitute the entire agreement between V8Engine and you in relation to your use of this Website, and supersede all prior agreements and understandings.</p>
+                </div>
+                
+                <div class="value-item">
+                    <h3>12. Company Information</h3>
+                    <p>V8Engine is operated by Simon Liu, a sole proprietorship based in China. For business inquiries, please contact us at 582883825@qq.com.</p>
                 </div>
                 
                 <div class="value-item">
