--- a/404.html
+++ b/404.html
@@ -62,7 +62,7 @@
                 <div class="footer-section">
                     <h4 data-i18n="contact-info">Contact Info</h4>
                     <p>Email: 582883825@qq.com</p>
-                    <p data-i18n="rights-reserved">© 2025 V8Engine. All rights reserved.</p>
+                    <p>© 2025 V8Engine (Simon Liu). All rights reserved.</p>
                 </div>
             </div>
         </div>
