--- a/404.html
+++ b/404.html
@@ -19,6 +19,7 @@
                     <li><a href="./index.html" data-i18n="home">Home</a></li>
                     <li><a href="./about.html" data-i18n="about">About</a></li>
                     <li><a href="./projects.html" data-i18n="projects">Projects</a></li>
+                    <li><a href="./pricing.html" data-i18n="pricing">Pricing</a></li>
                     <li><a href="./download.html" data-i18n="download">Download</a></li>
                     <li><a href="./contact.html" data-i18n="contact">Contact</a></li>
                 </ul>
@@ -56,6 +57,7 @@
                         <li><a href="./index.html" data-i18n="home">Home</a></li>
                         <li><a href="./about.html" data-i18n="about">About</a></li>
                         <li><a href="./projects.html" data-i18n="projects">Projects</a></li>
+                        <li><a href="./pricing.html">Pricing</a></li>
                         <li><a href="./contact.html" data-i18n="contact">Contact</a></li>
                     </ul>
                 </div>
