--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,6 +19,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./projects.html">Projects</a></li>
+                    <li><a href="./pricing.html">Pricing</a></li>
                     <li><a href="./download.html">Download</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
@@ -126,6 +127,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./about.html">About</a></li>
                         <li><a href="./projects.html">Projects</a></li>
+                        <li><a href="./pricing.html">Pricing</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
