--- a/refund-policy.html
+++ b/refund-policy.html
@@ -19,6 +19,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./projects.html">Projects</a></li>
+                    <li><a href="./pricing.html">Pricing</a></li>
                     <li><a href="./download.html">Download</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
@@ -115,6 +116,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./about.html">About</a></li>
                         <li><a href="./projects.html">Projects</a></li>
+                        <li><a href="./pricing.html">Pricing</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
