--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -132,6 +132,14 @@
                     </ul>
                 </div>
                 <div class="footer-section">
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="./terms-and-conditions.html">Terms & Conditions</a></li>
+                        <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="./refund-policy.html">Refund Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
                     <h4>Contact Info</h4>
                     <p>Email: 582883825@qq.com</p>
                     <p>© 2025 V8Engine. All rights reserved.</p>
