--- a/pricing.html
+++ b/pricing.html
@@ -178,11 +178,11 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Legal</h4>
+                    <h4 data-i18n="legal">Legal</h4>
                     <ul>
-                        <li><a href="./terms-and-conditions.html">Terms & Conditions</a></li>
-                        <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-                        <li><a href="./refund-policy.html">Refund Policy</a></li>
+                        <li><a href="./terms-and-conditions.html" data-i18n="terms-and-conditions">Terms & Conditions</a></li>
+                        <li><a href="./privacy-policy.html" data-i18n="privacy-policy">Privacy Policy</a></li>
+                        <li><a href="./refund-policy.html" data-i18n="refund-policy">Refund Policy</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
