--- a/projects_zh.html
+++ b/projects_zh.html
@@ -137,11 +137,11 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>法律</h4>
+                    <h4 data-i18n="legal">法律</h4>
                     <ul>
-                        <li><a href="./terms-and-conditions_zh.html">条款和条件</a></li>
-                        <li><a href="./privacy-policy_zh.html">隐私政策</a></li>
-                        <li><a href="./refund-policy_zh.html">退款政策</a></li>
+                        <li><a href="./terms-and-conditions_zh.html" data-i18n="terms-and-conditions">条款和条件</a></li>
+                        <li><a href="./privacy-policy_zh.html" data-i18n="privacy-policy">隐私政策</a></li>
+                        <li><a href="./refund-policy_zh.html" data-i18n="refund-policy">退款政策</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
