--- a/pricing.html
+++ b/pricing.html
@@ -16,12 +16,12 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./about.html">About</a></li>
-                    <li><a href="./projects.html">Projects</a></li>
-                    <li><a href="./pricing.html" class="active">Pricing</a></li>
-                    <li><a href="./download.html">Download</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./index.html" data-i18n="home">Home</a></li>
+                    <li><a href="./about.html" data-i18n="about">About</a></li>
+                    <li><a href="./projects.html" data-i18n="projects">Projects</a></li>
+                    <li><a href="./pricing.html" class="active" data-i18n="pricing">Pricing</a></li>
+                    <li><a href="./download.html" data-i18n="download">Download</a></li>
+                    <li><a href="./contact.html" data-i18n="contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="language-switch">
