--- a/pricing_zh.html
+++ b/pricing_zh.html
@@ -16,12 +16,12 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./index.html" data-i18n="home">首页</a></li>
-                    <li><a href="./about.html" data-i18n="about">关于我们</a></li>
-                    <li><a href="./projects.html" data-i18n="projects">项目</a></li>
+                    <li><a href="./index_zh.html" data-i18n="home">首页</a></li>
+                    <li><a href="./about_zh.html" data-i18n="about">关于我们</a></li>
+                    <li><a href="./projects_zh.html" data-i18n="projects">项目</a></li>
                     <li><a href="./pricing_zh.html" class="active" data-i18n="pricing">定价</a></li>
-                    <li><a href="./download.html" data-i18n="download">下载</a></li>
-                    <li><a href="./contact.html" data-i18n="contact">联系我们</a></li>
+                    <li><a href="./download_zh.html" data-i18n="download">下载</a></li>
+                    <li><a href="./contact_zh.html" data-i18n="contact">联系我们</a></li>
                 </ul>
             </nav>
             <div class="language-switch">
