--- a/pricing.html
+++ b/pricing.html
@@ -34,8 +34,8 @@
     <!-- Pricing Hero Section -->
     <section class="download-hero">
         <div class="container">
-            <h2>Our Pricing</h2>
-            <p>Transparent pricing for all our software solutions and services</p>
+            <h2 data-i18n="pricing-hero-title">Our Pricing</h2>
+            <p data-i18n="pricing-hero-desc">Transparent pricing for all our software solutions and services</p>
         </div>
     </section>
 
@@ -46,84 +46,84 @@
                 <!-- Basic Plan -->
                 <div class="download-card">
                     <div class="download-icon">📦</div>
-                    <h3>Basic</h3>
-                    <p class="price">$29<span>/month</span></p>
+                    <h3 data-i18n="basic-plan">Basic</h3>
+                    <p class="price" data-i18n="price-basic">$29<span>/month</span></p>
                     <div class="download-info">
-                        <div><strong>Features included:</strong></div>
-                        <div>• Up to 5 projects</div>
-                        <div>• Basic support</div>
-                        <div>• 1GB storage</div>
-                        <div>• Standard templates</div>
+                        <div><strong data-i18n="features-title">Features included:</strong></div>
+                        <div data-i18n="basic-feature1">• Up to 5 projects</div>
+                        <div data-i18n="basic-feature2">• Basic support</div>
+                        <div data-i18n="basic-feature3">• 1GB storage</div>
+                        <div data-i18n="basic-feature4">• Standard templates</div>
                     </div>
                     <div class="download-links">
-                        <a href="./contact.html" class="btn secondary">Get Started</a>
+                        <a href="./contact.html" class="btn secondary" data-i18n="get-started">Get Started</a>
                     </div>
                 </div>
 
                 <!-- Professional Plan -->
                 <div class="download-card">
                     <div class="download-icon">💼</div>
-                    <h3>Professional</h3>
-                    <p class="price">$79<span>/month</span></p>
+                    <h3 data-i18n="professional-plan">Professional</h3>
+                    <p class="price" data-i18n="price-professional">$79<span>/month</span></p>
                     <div class="download-info">
-                        <div><strong>Features included:</strong></div>
-                        <div>• Up to 20 projects</div>
-                        <div>• Priority support</div>
-                        <div>• 10GB storage</div>
-                        <div>• Advanced templates</div>
-                        <div>• Custom integrations</div>
-                        <div>• Analytics dashboard</div>
+                        <div><strong data-i18n="features-title">Features included:</strong></div>
+                        <div data-i18n="professional-feature1">• Up to 20 projects</div>
+                        <div data-i18n="professional-feature2">• Priority support</div>
+                        <div data-i18n="professional-feature3">• 10GB storage</div>
+                        <div data-i18n="professional-feature4">• Advanced templates</div>
+                        <div data-i18n="professional-feature5">• Custom integrations</div>
+                        <div data-i18n="professional-feature6">• Analytics dashboard</div>
                     </div>
                     <div class="download-links">
-                        <a href="./contact.html" class="btn primary">Get Started</a>
+                        <a href="./contact.html" class="btn primary" data-i18n="get-started">Get Started</a>
                     </div>
                 </div>
 
                 <!-- Enterprise Plan -->
                 <div class="download-card">
                     <div class="download-icon">🏢</div>
-                    <h3>Enterprise</h3>
-                    <p class="price">Custom</p>
+                    <h3 data-i18n="enterprise-plan">Enterprise</h3>
+                    <p class="price" data-i18n="price-enterprise">Custom</p>
                     <div class="download-info">
-                        <div><strong>Features included:</strong></div>
-                        <div>• Unlimited projects</div>
-                        <div>• 24/7 dedicated support</div>
-                        <div>• Unlimited storage</div>
-                        <div>• Custom templates</div>
-                        <div>• Full integrations</div>
-                        <div>• Advanced analytics</div>
-                        <div>• Dedicated account manager</div>
-                        <div>• On-premise deployment</div>
+                        <div><strong data-i18n="features-title">Features included:</strong></div>
+                        <div data-i18n="enterprise-feature1">• Unlimited projects</div>
+                        <div data-i18n="enterprise-feature2">• 24/7 dedicated support</div>
+                        <div data-i18n="enterprise-feature3">• Unlimited storage</div>
+                        <div data-i18n="enterprise-feature4">• Custom templates</div>
+                        <div data-i18n="enterprise-feature5">• Full integrations</div>
+                        <div data-i18n="enterprise-feature6">• Advanced analytics</div>
+                        <div data-i18n="enterprise-feature7">• Dedicated account manager</div>
+                        <div data-i18n="enterprise-feature8">• On-premise deployment</div>
                     </div>
                     <div class="download-links">
-                        <a href="./contact.html" class="btn secondary">Contact Sales</a>
+                        <a href="./contact.html" class="btn secondary" data-i18n="contact-sales">Contact Sales</a>
                     </div>
                 </div>
             </div>
 
             <!-- One-time Purchase Options -->
             <div class="installation-guide">
-                <h2>One-time Purchase Options</h2>
+                <h2 data-i18n="one-time-title">One-time Purchase Options</h2>
                 <div class="guide-steps">
                     <div class="step">
                         <div class="step-number">1</div>
                         <div class="step-content">
-                            <h3>Starter License</h3>
-                            <p>$199 - Perfect for individuals and small projects. Includes 1-year updates and basic support.</p>
+                            <h3 data-i18n="starter-license">Starter License</h3>
+                            <p data-i18n="starter-license-desc">$199 - Perfect for individuals and small projects. Includes 1-year updates and basic support.</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">2</div>
                         <div class="step-content">
-                            <h3>Professional License</h3>
-                            <p>$499 - Ideal for businesses and teams. Includes 1-year updates, priority support, and advanced features.</p>
+                            <h3 data-i18n="professional-license">Professional License</h3>
+                            <p data-i18n="professional-license-desc">$499 - Ideal for businesses and teams. Includes 1-year updates, priority support, and advanced features.</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">3</div>
                         <div class="step-content">
-                            <h3>Enterprise License</h3>
-                            <p>$1,299 - For large organizations. Includes perpetual license, 2-year updates, and premium support.</p>
+                            <h3 data-i18n="enterprise-license">Enterprise License</h3>
+                            <p data-i18n="enterprise-license-desc">$1,299 - For large organizations. Includes perpetual license, 2-year updates, and premium support.</p>
                         </div>
                     </div>
                 </div>
@@ -131,27 +131,27 @@
 
             <!-- FAQ Section -->
             <div class="installation-guide" style="margin-top: 60px;">
-                <h2>Frequently Asked Questions</h2>
+                <h2 data-i18n="faq-title">Frequently Asked Questions</h2>
                 <div class="guide-steps">
                     <div class="step">
                         <div class="step-number">?</div>
                         <div class="step-content">
-                            <h3>Do you offer discounts for non-profits?</h3>
-                            <p>Yes, we offer special pricing for non-profit organizations. Please contact our sales team for more information.</p>
+                            <h3 data-i18n="faq1-question">Do you offer discounts for non-profits?</h3>
+                            <p data-i18n="faq1-answer">Yes, we offer special pricing for non-profit organizations. Please contact our sales team for more information.</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">?</div>
                         <div class="step-content">
-                            <h3>Can I change plans later?</h3>
-                            <p>Yes, you can upgrade or downgrade your plan at any time. Changes take effect immediately.</p>
+                            <h3 data-i18n="faq2-question">Can I change plans later?</h3>
+                            <p data-i18n="faq2-answer">Yes, you can upgrade or downgrade your plan at any time. Changes take effect immediately.</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">?</div>
                         <div class="step-content">
-                            <h3>What payment methods do you accept?</h3>
-                            <p>We accept all major credit cards, PayPal, and bank transfers for annual plans.</p>
+                            <h3 data-i18n="faq3-question">What payment methods do you accept?</h3>
+                            <p data-i18n="faq3-answer">We accept all major credit cards, PayPal, and bank transfers for annual plans.</p>
                         </div>
                     </div>
                 </div>
