--- a/pricing_zh.html
+++ b/pricing_zh.html
@@ -34,8 +34,8 @@
     <!-- Pricing Hero Section -->
     <section class="download-hero">
         <div class="container">
-            <h2>我们的定价</h2>
-            <p>所有软件解决方案和服务的透明定价</p>
+            <h2 data-i18n="pricing-hero-title">我们的定价</h2>
+            <p data-i18n="pricing-hero-desc">所有软件解决方案和服务的透明定价</p>
         </div>
     </section>
 
@@ -46,84 +46,84 @@
                 <!-- Basic Plan -->
                 <div class="download-card">
                     <div class="download-icon">📦</div>
-                    <h3>基础版</h3>
-                    <p class="price">￥199<span>/月</span></p>
+                    <h3 data-i18n="basic-plan">基础版</h3>
+                    <p class="price" data-i18n="price-basic">￥199<span>/月</span></p>
                     <div class="download-info">
-                        <div><strong>包含功能：</strong></div>
-                        <div>• 最多5个项目</div>
-                        <div>• 基础支持</div>
-                        <div>• 1GB存储空间</div>
-                        <div>• 标准模板</div>
+                        <div><strong data-i18n="features-title">包含功能：</strong></div>
+                        <div data-i18n="basic-feature1">• 最多5个项目</div>
+                        <div data-i18n="basic-feature2">• 基础支持</div>
+                        <div data-i18n="basic-feature3">• 1GB存储空间</div>
+                        <div data-i18n="basic-feature4">• 标准模板</div>
                     </div>
                     <div class="download-links">
-                        <a href="./contact.html" class="btn secondary">开始使用</a>
+                        <a href="./contact.html" class="btn secondary" data-i18n="get-started">开始使用</a>
                     </div>
                 </div>
 
                 <!-- Professional Plan -->
                 <div class="download-card">
                     <div class="download-icon">💼</div>
-                    <h3>专业版</h3>
-                    <p class="price">￥549<span>/月</span></p>
+                    <h3 data-i18n="professional-plan">专业版</h3>
+                    <p class="price" data-i18n="price-professional">￥549<span>/月</span></p>
                     <div class="download-info">
-                        <div><strong>包含功能：</strong></div>
-                        <div>• 最多20个项目</div>
-                        <div>• 优先支持</div>
-                        <div>• 10GB存储空间</div>
-                        <div>• 高级模板</div>
-                        <div>• 自定义集成</div>
-                        <div>• 分析仪表板</div>
+                        <div><strong data-i18n="features-title">包含功能：</strong></div>
+                        <div data-i18n="professional-feature1">• 最多20个项目</div>
+                        <div data-i18n="professional-feature2">• 优先支持</div>
+                        <div data-i18n="professional-feature3">• 10GB存储空间</div>
+                        <div data-i18n="professional-feature4">• 高级模板</div>
+                        <div data-i18n="professional-feature5">• 自定义集成</div>
+                        <div data-i18n="professional-feature6">• 分析仪表板</div>
                     </div>
                     <div class="download-links">
-                        <a href="./contact.html" class="btn primary">开始使用</a>
+                        <a href="./contact.html" class="btn primary" data-i18n="get-started">开始使用</a>
                     </div>
                 </div>
 
                 <!-- Enterprise Plan -->
                 <div class="download-card">
                     <div class="download-icon">🏢</div>
-                    <h3>企业版</h3>
-                    <p class="price">定制</p>
+                    <h3 data-i18n="enterprise-plan">企业版</h3>
+                    <p class="price" data-i18n="price-enterprise">定制</p>
                     <div class="download-info">
-                        <div><strong>包含功能：</strong></div>
-                        <div>• 无限制项目</div>
-                        <div>• 24/7专属支持</div>
-                        <div>• 无限制存储空间</div>
-                        <div>• 自定义模板</div>
-                        <div>• 完整集成</div>
-                        <div>• 高级分析</div>
-                        <div>• 专属客户经理</div>
-                        <div>• 本地部署</div>
+                        <div><strong data-i18n="features-title">包含功能：</strong></div>
+                        <div data-i18n="enterprise-feature1">• 无限制项目</div>
+                        <div data-i18n="enterprise-feature2">• 24/7专属支持</div>
+                        <div data-i18n="enterprise-feature3">• 无限制存储空间</div>
+                        <div data-i18n="enterprise-feature4">• 自定义模板</div>
+                        <div data-i18n="enterprise-feature5">• 完整集成</div>
+                        <div data-i18n="enterprise-feature6">• 高级分析</div>
+                        <div data-i18n="enterprise-feature7">• 专属客户经理</div>
+                        <div data-i18n="enterprise-feature8">• 本地部署</div>
                     </div>
                     <div class="download-links">
-                        <a href="./contact.html" class="btn secondary">联系销售</a>
+                        <a href="./contact.html" class="btn secondary" data-i18n="contact-sales">联系销售</a>
                     </div>
                 </div>
             </div>
 
             <!-- One-time Purchase Options -->
             <div class="installation-guide">
-                <h2>一次性购买选项</h2>
+                <h2 data-i18n="one-time-title">一次性购买选项</h2>
                 <div class="guide-steps">
                     <div class="step">
                         <div class="step-number">1</div>
                         <div class="step-content">
-                            <h3>入门许可证</h3>
-                            <p>￥1,399 - 适合个人和小型项目。包含1年更新和基础支持。</p>
+                            <h3 data-i18n="starter-license">入门许可证</h3>
+                            <p data-i18n="starter-license-desc">￥1,399 - 适合个人和小型项目。包含1年更新和基础支持。</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">2</div>
                         <div class="step-content">
-                            <h3>专业许可证</h3>
-                            <p>￥3,499 - 适合企业和团队。包含1年更新、优先支持和高级功能。</p>
+                            <h3 data-i18n="professional-license">专业许可证</h3>
+                            <p data-i18n="professional-license-desc">￥3,499 - 适合企业和团队。包含1年更新、优先支持和高级功能。</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">3</div>
                         <div class="step-content">
-                            <h3>企业许可证</h3>
-                            <p>￥9,099 - 适合大型组织。包含永久许可证、2年更新和高级支持。</p>
+                            <h3 data-i18n="enterprise-license">企业许可证</h3>
+                            <p data-i18n="enterprise-license-desc">￥9,099 - 适合大型组织。包含永久许可证、2年更新和高级支持。</p>
                         </div>
                     </div>
                 </div>
@@ -131,27 +131,27 @@
 
             <!-- FAQ Section -->
             <div class="installation-guide" style="margin-top: 60px;">
-                <h2>常见问题</h2>
+                <h2 data-i18n="faq-title">常见问题</h2>
                 <div class="guide-steps">
                     <div class="step">
                         <div class="step-number">?</div>
                         <div class="step-content">
-                            <h3>您为非营利组织提供折扣吗？</h3>
-                            <p>是的，我们为非营利组织提供特殊定价。请联系我们的销售团队了解更多信息。</p>
+                            <h3 data-i18n="faq1-question">您为非营利组织提供折扣吗？</h3>
+                            <p data-i18n="faq1-answer">是的，我们为非营利组织提供特殊定价。请联系我们的销售团队了解更多信息。</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">?</div>
                         <div class="step-content">
-                            <h3>我以后可以更改套餐吗？</h3>
-                            <p>是的，您可以随时升级或降级您的套餐。更改会立即生效。</p>
+                            <h3 data-i18n="faq2-question">我以后可以更改套餐吗？</h3>
+                            <p data-i18n="faq2-answer">是的，您可以随时升级或降级您的套餐。更改会立即生效。</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">?</div>
                         <div class="step-content">
-                            <h3>您接受哪些付款方式？</h3>
-                            <p>我们接受所有主要信用卡、PayPal和年度计划的银行转账。</p>
+                            <h3 data-i18n="faq3-question">您接受哪些付款方式？</h3>
+                            <p data-i18n="faq3-answer">我们接受所有主要信用卡、PayPal和年度计划的银行转账。</p>
                         </div>
                     </div>
                 </div>
