--- a/download.html
+++ b/download.html
@@ -90,6 +90,30 @@
                         <a href="#" class="btn secondary" data-i18n="download-now">Download Now</a>
                     </div>
                 </div>
+                
+                <!-- KeyMaster -->
+                <div class="download-card">
+                    <div class="download-icon">
+                        <span class="icon">⌨️</span>
+                    </div>
+                    <h3>KeyMaster</h3>
+                    <p data-i18n="keymaster-desc">Advanced macOS shortcut management tool with multi-language support</p>
+                    <div class="download-info">
+                        <div class="version">
+                            <span data-i18n="version">Version:</span> 1.0.0
+                        </div>
+                        <div class="release-date">
+                            <span data-i18n="release-date">Release Date:</span> 2025-12-31
+                        </div>
+                        <div class="platform">
+                            <span data-i18n="platform">Platform:</span> MacOS 10.15+
+                        </div>
+                    </div>
+                    <div class="download-links">
+                        <a href="./app/keymaster/user_manual_en.html" class="btn primary" data-i18n="documentation">Documentation</a>
+                        <a href="https://apps.apple.com/app/keymaster/id6756976904" class="btn secondary" data-i18n="app-store-download">Download from App Store</a>
+                    </div>
+                </div>
             </div>
 
             <!-- Installation Guide -->
