--- a/download_zh.html
+++ b/download_zh.html
@@ -90,6 +90,30 @@
                         <a href="#" class="btn secondary" data-i18n="download-now">立即下载</a>
                     </div>
                 </div>
+                
+                <!-- KeyMaster -->
+                <div class="download-card">
+                    <div class="download-icon">
+                        <span class="icon">⌨️</span>
+                    </div>
+                    <h3>KeyMaster</h3>
+                    <p data-i18n="keymaster-desc">支持多语言的高级macOS快捷键管理工具</p>
+                    <div class="download-info">
+                        <div class="version">
+                            <span data-i18n="version">版本:</span> 1.0.0
+                        </div>
+                        <div class="release-date">
+                            <span data-i18n="release-date">发布日期:</span> 2025-12-31
+                        </div>
+                        <div class="platform">
+                            <span data-i18n="platform">平台:</span> MacOS 10.15+
+                        </div>
+                    </div>
+                    <div class="download-links">
+                        <a href="./app/keymaster/user_manual.html" class="btn primary" data-i18n="documentation">文档</a>
+                        <a href="https://apps.apple.com/app/keymaster/id6756976904" class="btn secondary" data-i18n="app-store-download">从App Store下载</a>
+                    </div>
+                </div>
             </div>
 
             <!-- Installation Guide -->
