--- a/projects.html
+++ b/projects.html
@@ -84,6 +84,23 @@
                         <a href="https://github.com/SimonLiu2016/password_manager" class="btn primary" target="_blank" data-i18n="view-on-github">View on GitHub</a>
                     </div>
                 </div>
+                
+                <!-- Project 3 -->
+                <div class="project-card" data-category="desktop">
+                    <div class="project-image">
+                        <img src="./images/project3.jpg" alt="KeyMaster" onerror="this.style.display='none'">
+                    </div>
+                    <div class="project-content">
+                        <h3>KeyMaster</h3>
+                        <p data-i18n="keymaster-project-desc">Advanced macOS shortcut management tool with multi-language support</p>
+                        <div class="project-tags">
+                            <span class="tag">MacOS</span>
+                            <span class="tag">Swift</span>
+                            <span class="tag">Productivity</span>
+                        </div>
+                        <a href="./app/keymaster/user_manual_en.html" class="btn primary" target="_blank" data-i18n="documentation">Documentation</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
