--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
                 <!-- Project 3 -->
                 <div class="project-card" data-category="desktop">
                     <div class="project-image">
-                        <img src="./images/keymaster-icon.png" alt="KeyMaster" onerror="this.style.display='none'">
+                        <img src="./images/project3.png" alt="KeyMaster" onerror="this.style.display='none'">
                     </div>
                     <div class="project-content">
                         <h3>KeyMaster</h3>
